feat: MVP of frontend

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -10,11 +10,30 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@internationalized/date": "^3.10.0",
+    "@reduxjs/toolkit": "^2.10.1",
+    "@reonic/simulator-core": "workspace:^",
+    "class-variance-authority": "^0.7.1",
+    "date-fns": "^4.1.0",
+    "echarts": "^6.0.0",
+    "echarts-for-react": "^3.0.5",
+    "lucide-react": "^0.552.0",
     "react": "^19.2",
-    "react-dom": "^19.2"
+    "react-aria-components": "^1.13.0",
+    "react-dom": "^19.2",
+    "react-redux": "^9.2.0",
+    "react-router": "^7.9.5",
+    "redux-persist": "^6.0.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^3.1.1",
+    "tailwindcss": "^4.1.16",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
+    "@react-aria/optimize-locales-plugin": "^1.1.5",
+    "@tailwindcss/language-server": "^0.14.29",
+    "@tailwindcss/vite": "^4.1.16",
     "@types/node": "^24.6.0",
     "@types/react": "^19.1.16",
     "@types/react-dom": "^19.1.9",
